# game_rpc_project

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Notes/: 分布式优化.md  分布式登录系统.md
chat_server/: CMakeLists.txt  ChatServer.cpp  ChatServiceImpl.cpp  ChatServiceImpl.h
gateway_server/: CMakeLists.txt  GatewayTcpServer.cpp  GatewayTcpServer.h  MyGatewayService.h  gateway_server.cpp  main.cpp
login_server/: CMakeLists.txt  MyLoginService.h  login_server.cpp  main.cpp
match_server/: CMakeLists.txt  MyMatchService.h  match_server.cpp
pb/: chat.pb.cc  chat.pb.h  client_gateway.pb.cc  client_gateway.pb.h  gateway.pb.cc  gateway.pb.h  login.pb.cc  login.pb.h  match.pb.cc  match.pb.h  rpcheader.pb.cc  rpcheader.pb.h
proto/: chat.proto  client_gateway.proto  gateway.proto  login.proto  match.proto  rpcheader.proto
rpc_core/: CMakeLists.txt
rpc_core/include/: Channel.h  ConnectionPool.h  MsgID.h  MyChannel.h  MyController.h  MyGatewayService.h  MyLoginService.h  MyMatchService.h  RPCClosure.h  RPCServer.h  RedisClient.h
rpc_core/src/: Channel.cpp  MyChannel.cpp  MyController.cpp  RPCServer.cpp  RedisClient.cpp
test_client/: CMakeLists.txt  MockClient.cpp  MockClient.h  mock_client.cpp  test_client.cpp
